--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "web": "tsx src/web-server.ts",
     "export-obsidian": "tsx src/export-obsidian.ts",
     "export-incremental": "tsx src/export-incremental.ts",
+    "backup": "tsx scripts/backup.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
@@ -41,6 +42,7 @@
     "better-sqlite3": "^11.7.0",
     "chromadb": "^1.9.2",
     "cors": "^2.8.5",
+    "p-limit": "^4.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fast-glob": "^3.3.3",
@@ -54,6 +56,7 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@jest/globals": "^29.7.0",
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.2.2",
