--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,7 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Prepare database
+        run: npm run prepare-db
       - name: Test
         run: npm run test
