feat: harden search parity and semantic runtime readiness

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "search": "tsx src/search.ts",
     "search:semantic": "tsx src/semantic-search.ts",
     "search:hybrid": "tsx src/search-hybrid-cli.ts",
+    "readiness:semantic": "tsx src/semantic-readiness-cli.ts",
     "generate-embeddings": "tsx src/generate-embeddings.ts",
     "extract-insights": "tsx src/extract-insights-cli.ts",
     "smart-tag": "tsx src/smart-tag-cli.ts",
