--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   # Optional: ChromaDB for vector storage
   chroma:
-    image: ghcr.io/chroma-core/chroma:0.4.8
+    image: ghcr.io/chroma-core/chroma:latest
     container_name: knowledge-base-chroma
     environment:
       - IS_PERSISTENT=TRUE
