feat: finalize release hardening and closure evidence

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "watch": "tsx src/watch.ts",
     "watch:semantic": "tsx src/watch.ts --with-embeddings",
     "watch:smoke": "tsx scripts/watch-smoke-test.ts",
+    "probe:runtime": "tsx scripts/probe-search-runtime.ts",
+    "probe:staging": "tsx scripts/probe-search-runtime.ts --env staging --mode all",
+    "probe:prod": "tsx scripts/probe-search-runtime.ts --env prod --mode all",
+    "probe:parity": "tsx scripts/probe-search-runtime.ts --env local --mode parity",
+    "probe:strict": "tsx scripts/probe-search-runtime.ts --env local --mode strict",
     "search": "tsx src/search.ts",
     "search:semantic": "tsx src/semantic-search.ts",
     "search:hybrid": "tsx src/search-hybrid-cli.ts",
@@ -46,6 +51,10 @@
     "redact:scan": "tsx src/redaction-cli.ts scan",
     "redact:apply": "tsx src/redaction-cli.ts apply",
     "redact:validate": "tsx src/redaction-cli.ts validate",
+    "alerts:verify": "tsx scripts/verify-alerts.ts",
+    "alerts:verify:strict": "tsx scripts/verify-alerts.ts --strict",
+    "release-index:backfill": "tsx scripts/backfill-release-index.ts",
+    "release-index:backfill:dry": "tsx scripts/backfill-release-index.ts --dry-run",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:unit": "vitest run src",
