--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,19 @@ jobs:
         run: npm run generate-embeddings -- --mode reindex --limit 200 --yes
 
       - name: Run strict readiness gate
-        run: npm run readiness:semantic:strict
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm run readiness:semantic:strict | tee strict-readiness.log
+
+      - name: Upload strict readiness evidence
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: strict-readiness-log-${{ github.ref_name }}
+          path: strict-readiness.log
+          if-no-files-found: error
+          retention-days: 30
 
   # ============================================
   # Build & Push Release Docker Image
