--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "knowledge-base",
+  "private": true,
   "version": "1.0.0",
   "description": "Personal knowledge database system - Token-optimized Claude conversation export & archive",
   "type": "module",
+  "workspaces": [
+    "web-react",
+    "packages/*",
+    "apps/*"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:all": "npm run build && npm run -w packages/contracts build && npm run -w web-react build && npm run -w apps/mobile build && npm run -w apps/desktop build",
+    "build:contracts": "npm run -w packages/contracts build",
+    "build:web": "npm run -w web-react build",
+    "build:mobile": "npm run -w apps/mobile build",
+    "build:desktop": "npm run -w apps/desktop build",
     "start": "node dist/web-server.js",
     "prepare-db": "npm run migrate && npm run seed",
     "prestart": "npm run prepare-db",
@@ -17,6 +28,8 @@
     "export:dev": "tsx src/export.ts",
     "sync": "./scripts/sync-cloud.sh",
     "ingest:all": "tsx src/export.ts",
+    "ingest:universe": "tsx src/universe-ingest-cli.ts",
+    "ingest:universe:save": "tsx src/universe-ingest-cli.ts --save",
     "watch": "tsx src/watch.ts",
     "watch:semantic": "tsx src/watch.ts --with-embeddings",
     "watch:smoke": "tsx scripts/watch-smoke-test.ts",
@@ -53,6 +66,10 @@
     "redact:validate": "tsx src/redaction-cli.ts validate",
     "alerts:verify": "tsx scripts/verify-alerts.ts",
     "alerts:verify:strict": "tsx scripts/verify-alerts.ts --strict",
+    "closure:evidence:check": "tsx scripts/verify-closure-evidence.ts",
+    "closure:evidence:strict": "tsx scripts/verify-closure-evidence.ts --strict",
+    "release:evidence:generate": "tsx scripts/generate-release-evidence.ts",
+    "release:evidence:strict": "tsx scripts/generate-release-evidence.ts --strict",
     "release-index:backfill": "tsx scripts/backfill-release-index.ts",
     "release-index:backfill:dry": "tsx scripts/backfill-release-index.ts --dry-run",
     "test": "vitest",
@@ -60,6 +77,8 @@
     "test:unit": "vitest run src",
     "test:integration": "vitest run tests",
     "test:parity": "vitest run tests/search-parity-smoke.test.ts",
+    "test:universe": "vitest run src/universe/*.test.ts src/sources/providers/*.test.ts",
+    "test:native": "vitest run tests/native-parity.test.ts tests/native-runtime-smoke.test.ts tests/native-mobile-shell.test.ts tests/native-desktop-shell.test.ts",
     "test:ci": "npm run test:unit && npm run test:integration",
     "test:stability": "bash ./scripts/test-stability.sh",
     "test:stability:ci": "STABILITY_RUNS=3 bash ./scripts/test-stability.sh",
