--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,106 +1,326 @@
-name: TypeScript/Node.js CI
+name: CI
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches:
+      - '**'
   pull_request:
-    branches: [ main, master, develop ]
-  workflow_dispatch:
+    branches: [master, main]
+    types: [opened, synchronize, reopened, ready_for_review]
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
+env:
+  NODE_VERSION: "20"
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  test:
+  # ============================================
+  # Lint & Type Check
+  # ============================================
+  lint:
+    name: Lint & Type Check
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Detect package manager
-        id: detect
-        run: |
-          if [ -f "pnpm-lock.yaml" ]; then
-            echo "pm=pnpm" >> $GITHUB_OUTPUT
-          elif [ -f "yarn.lock" ]; then
-            echo "pm=yarn" >> $GITHUB_OUTPUT
-          elif [ -f "package-lock.json" ] || [ -f "package.json" ]; then
-            echo "pm=npm" >> $GITHUB_OUTPUT
-          else
-            echo "pm=none" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Install pnpm
-        if: steps.detect.outputs.pm == 'pnpm'
-        run: npm install -g pnpm
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
 
       - name: Install dependencies
-        if: steps.detect.outputs.pm != 'none'
-        run: |
-          if [ "${{ steps.detect.outputs.pm }}" == "pnpm" ]; then
-            pnpm install || true
-          elif [ "${{ steps.detect.outputs.pm }}" == "yarn" ]; then
-            yarn install || true
-          else
-            npm install || true
-          fi
+        run: npm ci
 
-      - name: Lint with ESLint
+      - name: TypeScript type check
+        run: npx tsc --noEmit
+
+  # ============================================
+  # Test with Coverage
+  # ============================================
+  test:
+    name: Test & Coverage
+    runs-on: ubuntu-latest
+    env:
+      NODE_ENV: test
+      KB_EMBEDDINGS_PROVIDER: mock
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Cache TypeScript build
+        uses: actions/cache@v4
+        with:
+          path: dist
+          key: ${{ runner.os }}-tsc-${{ hashFiles('src/**/*.ts', 'tsconfig.json') }}
+          restore-keys: |
+            ${{ runner.os }}-tsc-
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Prepare database
+        run: npm run prepare-db
+
+      - name: Run deterministic test suites
+        run: npm run test:ci
+
+      - name: Generate coverage report (non-blocking)
+        run: npm run test:coverage -- --reporter=dot --coverage.reporter=json-summary --coverage.reporter=lcov
         continue-on-error: true
-        if: steps.detect.outputs.pm != 'none'
-        run: |
-          if [ "${{ steps.detect.outputs.pm }}" == "pnpm" ]; then
-            pnpm run lint || echo "::warning::ESLint found issues"
-          elif [ "${{ steps.detect.outputs.pm }}" == "yarn" ]; then
-            yarn lint || echo "::warning::ESLint found issues"
-          else
-            npm run lint || echo "::warning::ESLint found issues"
-          fi
-
-      - name: Type check with tsc
-        continue-on-error: true
-        if: steps.detect.outputs.pm != 'none' && hashFiles('tsconfig.json') != ''
-        run: |
-          if [ -f "tsconfig.json" ]; then
-            npx tsc --noEmit || echo "::warning::TypeScript found type errors"
-          else
-            echo "::notice::No tsconfig.json found, skipping type checking"
-          fi
-
-      - name: Run tests
-        if: steps.detect.outputs.pm != 'none'
-        run: |
-          if [ "${{ steps.detect.outputs.pm }}" == "pnpm" ]; then
-            pnpm test -- --coverage || echo "::notice::No tests configured"
-          elif [ "${{ steps.detect.outputs.pm }}" == "yarn" ]; then
-            yarn test --coverage || echo "::notice::No tests configured"
-          else
-            npm test -- --coverage || echo "::notice::No tests configured"
-          fi
 
       - name: Upload coverage to Codecov
-        if: success() && hashFiles('coverage/lcov.info') != ''
+        if: always()
         uses: codecov/codecov-action@v4
         with:
           files: ./coverage/lcov.info
-          fail_ci_if_error: false
           flags: unittests
-          name: codecov-${{ matrix.node-version }}
+          name: knowledge-base-coverage
+          fail_ci_if_error: false
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Build
-        if: steps.detect.outputs.pm != 'none'
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
+          if-no-files-found: ignore
+          retention-days: 7
+
+  # ============================================
+  # Search Endpoint Parity Smoke
+  # ============================================
+  search-parity-smoke:
+    name: Search Parity Smoke
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    env:
+      NODE_ENV: test
+      KB_EMBEDDINGS_PROVIDER: mock
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Prepare database
+        run: npm run prepare-db
+
+      - name: Run parity smoke suite
+        run: npm run test:parity
+
+  # ============================================
+  # Universe Contracts & Ingest Safety
+  # ============================================
+  universe-contracts:
+    name: Universe Contracts
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    env:
+      NODE_ENV: test
+      KB_EMBEDDINGS_PROVIDER: mock
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Prepare database
+        run: npm run prepare-db
+
+      - name: Run universe suites
+        run: npm run test:universe
+
+      - name: Run native parity suite
+        run: npm run test:native
+
+  # ============================================
+  # Flaky Test Watch (Non-Blocking)
+  # ============================================
+  stability-watch:
+    name: Flaky Watch (non-blocking)
+    if: github.event_name == 'pull_request'
+    continue-on-error: true
+    runs-on: ubuntu-latest
+    env:
+      NODE_ENV: test
+      KB_EMBEDDINGS_PROVIDER: mock
+      STABILITY_RUNS: "3"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Prepare database
+        run: npm run prepare-db
+
+      - name: Repeat flaky-prone suites
+        run: npm run test:stability
+
+  # ============================================
+  # Secret Scanning
+  # ============================================
+  secrets:
+    name: Secret Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_CONFIG: .gitleaks.toml
+
+      - name: Install TruffleHog
         run: |
-          if [ "${{ steps.detect.outputs.pm }}" == "pnpm" ]; then
-            pnpm run build || echo "::notice::No build script configured"
-          elif [ "${{ steps.detect.outputs.pm }}" == "yarn" ]; then
-            yarn build || echo "::notice::No build script configured"
-          else
-            npm run build || echo "::notice::No build script configured"
-          fi
+          curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Run TruffleHog
+        run: |
+          trufflehog git file://. --only-verified --fail
+        continue-on-error: true
+
+  # ============================================
+  # Security Scanning
+  # ============================================
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: npm audit
+        run: npm audit --audit-level=high
+        continue-on-error: true
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: typescript
+          queries: security-and-quality
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:typescript"
+
+  # ============================================
+  # Docker Build & Push
+  # ============================================
+  docker:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix=
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
+
+      - name: Run Trivy vulnerability scanner
+        if: github.event_name != 'pull_request'
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
+        with:
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          format: "sarif"
+          output: "trivy-results.sarif"
+          severity: "CRITICAL,HIGH"
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        if: github.event_name != 'pull_request'
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: "trivy-results.sarif"
