--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,38 @@ jobs:
         run: npm run test:parity
 
   # ============================================
+  # Universe Contracts & Ingest Safety
+  # ============================================
+  universe-contracts:
+    name: Universe Contracts
+    runs-on: ubuntu-latest
+    needs: [test]
+    env:
+      NODE_ENV: test
+      KB_EMBEDDINGS_PROVIDER: mock
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Prepare database
+        run: npm run prepare-db
+
+      - name: Run universe suites
+        run: npm run test:universe
+
+      - name: Run native parity suite
+        run: npm run test:native
+
+  # ============================================
   # Strict Semantic/Hybrid Readiness Gate
   # ============================================
   readiness-strict:
@@ -140,7 +172,7 @@ jobs:
   runtime-probe-gates:
     name: Runtime Probe Gates
     runs-on: ubuntu-latest
-    needs: [parity-smoke, readiness-strict]
+    needs: [parity-smoke, readiness-strict, universe-contracts]
     permissions:
       contents: read
     steps:
@@ -212,7 +244,7 @@ jobs:
   docker-release:
     name: Docker Release
     runs-on: ubuntu-latest
-    needs: [test, parity-smoke, readiness-strict, runtime-probe-gates]
+    needs: [test, parity-smoke, readiness-strict, universe-contracts, runtime-probe-gates]
     permissions:
       contents: read
       packages: write
@@ -283,12 +315,70 @@ jobs:
           severity: "CRITICAL"
 
   # ============================================
+  # Release Evidence Packet + Closure Gate
+  # ============================================
+  release-evidence:
+    name: Release Evidence
+    runs-on: ubuntu-latest
+    needs: [docker-release, runtime-probe-gates]
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Download runtime probe artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: runtime-probe-gates-${{ github.ref_name }}
+          path: docs/evidence/runtime-probes
+
+      - name: Generate release evidence JSON and update release index
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm run release:evidence:generate -- \
+            --tag "${{ github.ref_name }}" \
+            --commit "${{ github.sha }}" \
+            --release-run-id "${{ github.run_id }}" \
+            --release-run-url "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
+            --image-ref "${{ needs.docker-release.outputs.image_ref }}" \
+            --alert-artifact "docs/evidence/alert-verification/latest.json" \
+            --reindex-evidence "pending: attach unbounded reindex artifact for tag ${{ github.ref_name }}"
+
+      - name: Verify closure evidence linkage
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm run closure:evidence:strict -- --tag "${{ github.ref_name }}"
+
+      - name: Upload release evidence artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-evidence-${{ github.ref_name }}
+          path: |
+            docs/evidence/release-evidence/${{ github.ref_name }}.json
+            docs/RELEASE_INDEX.md
+          if-no-files-found: error
+          retention-days: 30
+
+  # ============================================
   # Create GitHub Release
   # ============================================
   github-release:
     name: GitHub Release
     runs-on: ubuntu-latest
-    needs: [docker-release]
+    needs: [docker-release, release-evidence]
     permissions:
       contents: write
     steps:
