--- a/web-react/package.json
+++ b/web-react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@knowledge-base/contracts": "file:../packages/contracts",
     "@tanstack/react-query": "^5.90.20",
     "@types/d3": "^7.4.3",
     "chart.js": "^4.5.1",
