feat: add strict reindex evidence capture and closure gating

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "probe:prod": "tsx scripts/probe-search-runtime.ts --env prod --mode all",
     "probe:parity": "tsx scripts/probe-search-runtime.ts --env local --mode parity",
     "probe:strict": "tsx scripts/probe-search-runtime.ts --env local --mode strict",
+    "reindex:evidence": "tsx scripts/capture-reindex-evidence.ts",
+    "reindex:evidence:staging": "tsx scripts/capture-reindex-evidence.ts --env staging",
+    "reindex:evidence:prod": "tsx scripts/capture-reindex-evidence.ts --env prod",
     "search": "tsx src/search.ts",
     "search:semantic": "tsx src/semantic-search.ts",
     "search:hybrid": "tsx src/search-hybrid-cli.ts",
