--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -342,6 +342,15 @@ jobs:
           name: runtime-probe-gates-${{ github.ref_name }}
           path: docs/evidence/runtime-probes
 
+      - name: Resolve reindex evidence reference
+        shell: bash
+        env:
+          REINDEX_EVIDENCE_REF: ${{ vars.REINDEX_EVIDENCE_REF }}
+        run: |
+          set -euo pipefail
+          : "${REINDEX_EVIDENCE_REF:?Missing REINDEX_EVIDENCE_REF GitHub variable}"
+          echo "REINDEX_EVIDENCE_REF=$REINDEX_EVIDENCE_REF" >> "$GITHUB_ENV"
+
       - name: Generate release evidence JSON and update release index
         shell: bash
         run: |
@@ -353,13 +362,30 @@ jobs:
             --release-run-url "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
             --image-ref "${{ needs.docker-release.outputs.image_ref }}" \
             --alert-artifact "docs/evidence/alert-verification/latest.json" \
-            --reindex-evidence "pending: attach unbounded reindex artifact for tag ${{ github.ref_name }}"
+            --reindex-evidence "${REINDEX_EVIDENCE_REF}"
 
       - name: Verify closure evidence linkage
         shell: bash
         run: |
           set -euo pipefail
           npm run closure:evidence:strict -- --tag "${{ github.ref_name }}"
+
+      - name: Assemble release evidence bundle
+        shell: bash
+        run: |
+          set -euo pipefail
+          BUNDLE_DIR="release-evidence-bundle"
+          mkdir -p "$BUNDLE_DIR"
+
+          cp "docs/evidence/release-evidence/${{ github.ref_name }}.json" "$BUNDLE_DIR/release-evidence.json"
+          cp "docs/RELEASE_INDEX.md" "$BUNDLE_DIR/RELEASE_INDEX.md"
+          cp docs/evidence/runtime-probes/*.json "$BUNDLE_DIR/"
+
+          if [[ "$REINDEX_EVIDENCE_REF" =~ ^https?:// ]]; then
+            printf '%s\n' "$REINDEX_EVIDENCE_REF" > "$BUNDLE_DIR/reindex-evidence.url.txt"
+          else
+            cp "$REINDEX_EVIDENCE_REF" "$BUNDLE_DIR/reindex-evidence.json"
+          fi
 
       - name: Upload release evidence artifacts
         if: always()
@@ -369,6 +395,7 @@ jobs:
           path: |
             docs/evidence/release-evidence/${{ github.ref_name }}.json
             docs/RELEASE_INDEX.md
+            release-evidence-bundle/**
           if-no-files-found: error
           retention-days: 30
 
