--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:web": "npm run -w web-react build",
     "build:mobile": "npm run -w apps/mobile build",
     "build:desktop": "npm run -w apps/desktop build",
-    "sync:github-pages": "node scripts/sync-github-pages.mjs --output web-react/src/data/github-pages.json",
+    "sync:github-pages": "node scripts/sync-github-pages.mjs --output web-react/src/data/github-pages.json --curation web-react/src/data/github-pages-curation.json",
+    "validate:github-pages": "node scripts/validate-github-pages.mjs --input web-react/src/data/github-pages.json",
     "start": "node dist/web-server.js",
     "prepare-db": "npm run migrate && npm run seed",
     "prestart": "npm run prepare-db",
@@ -39,6 +40,8 @@
     "probe:prod": "tsx scripts/probe-search-runtime.ts --env prod --mode all",
     "probe:parity": "tsx scripts/probe-search-runtime.ts --env local --mode parity",
     "probe:strict": "tsx scripts/probe-search-runtime.ts --env local --mode strict",
+    "probe:preflight": "tsx scripts/preflight-runtime-probes.ts",
+    "probe:preflight:strict": "tsx scripts/preflight-runtime-probes.ts --strict",
     "reindex:evidence": "tsx scripts/capture-reindex-evidence.ts",
     "reindex:evidence:staging": "tsx scripts/capture-reindex-evidence.ts --env staging",
     "reindex:evidence:prod": "tsx scripts/capture-reindex-evidence.ts --env prod",
@@ -80,11 +83,12 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:unit": "vitest run src",
+    "test:web": "vitest run web-react/src",
     "test:integration": "vitest run tests",
     "test:parity": "vitest run tests/search-parity-smoke.test.ts",
     "test:universe": "vitest run src/universe/*.test.ts src/sources/providers/*.test.ts",
     "test:native": "vitest run tests/native-parity.test.ts tests/native-runtime-smoke.test.ts tests/native-mobile-shell.test.ts tests/native-desktop-shell.test.ts",
-    "test:ci": "npm run test:unit && npm run test:integration",
+    "test:ci": "npm run test:unit && npm run test:web && npm run test:integration",
     "test:stability": "bash ./scripts/test-stability.sh",
     "test:stability:ci": "STABILITY_RUNS=3 bash ./scripts/test-stability.sh",
     "test:ui": "vitest --ui",
